--- a/tests/tests.css
+++ b/tests/tests.css
@@ -1,4 +1,6 @@
-
+.errorMessage {
+	padding: 2px 6px;
+}
 
 #errorArea .header{
 	color: blue;
@@ -15,6 +17,18 @@
 #errorArea .green{
 	background-color: green;
 	color: white;
+	font-weight: bold;
+}
+
+#errorArea .additional-info {
+	background-color: blue;
+	color: white;
+	font-weight: bold;
+}
+
+#errorArea .warning {
+	background-color: rgb(250, 255, 117);
+	/* color: white; */
 	font-weight: bold;
 }
 
@@ -43,7 +57,7 @@
 	position: fixed;
 	bottom: 0;
 	left: 50%;
-	height: 15%;
+	height: 40%;
 	width: 50%;
 	transform: translateX(-50%);
 	border: 1px solid black;
